sonarqube fix bugs